# api-bottle-open-close-detection

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/app/: config.py  main.py
backend/src/app/routes/: classifier.py
backend/src/app/services/: model_service.py  preprocessor.py
backend/src/app/utils/: logger.py  validators.py
frontend/: Dockerfile  requirements.txt
frontend/src/: app.py
model/: requirements.txt
model/src/: augment.py  config.yaml  train.py
tests/: conftest.py  test_api.py  test_model.py
utils/: deploy.sh  docker_reset.sh  load_test.py  requirements-loadtest.txt
